--- a/package.json
+++ b/package.json
@@ -7,11 +7,11 @@
         "@testing-library/react": "^13.4.0",
         "@testing-library/user-event": "^13.5.0",
         "@vercel/analytics": "^1.2.2",
+        "nth-check": ">=2.0.1",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
         "web-vitals": "^2.1.4",
-        "webpack-dev-server": "^5.0.4",
-        "nth-check":">=2.0.1"
+        "webpack-dev-server": "^5.0.4"
     },
     "scripts": {
         "start": "react-scripts start",
@@ -38,7 +38,7 @@
         ]
     },
     "devDependencies": {
-        "tailwindcss": "^3.4.3",
-        "react-scripts": "^3.0.1"
+        "react-scripts": "^5.0.1",
+        "tailwindcss": "^3.4.3"
     }
 }
