--- a/package.json
+++ b/package.json
@@ -1,44 +1,32 @@
 {
     "name": "portfolio",
-    "version": "0.1.0",
     "private": true,
-    "dependencies": {
-        "@testing-library/jest-dom": "^5.17.0",
-        "@testing-library/react": "^13.4.0",
-        "@testing-library/user-event": "^13.5.0",
-        "@vercel/analytics": "^1.2.2",
-        "nth-check": ">=2.0.1",
-        "react": "^18.2.0",
-        "react-dom": "^18.2.0",
-        "web-vitals": "^2.1.4",
-        "webpack-dev-server": "^5.0.4"
-    },
+    "version": "0.0.0",
+    "type": "module",
     "scripts": {
-        "start": "react-scripts start",
-        "build": "react-scripts build",
-        "test": "react-scripts test",
-        "eject": "react-scripts eject"
+        "dev": "vite",
+        "build": "tsc -b && vite build",
+        "lint": "eslint .",
+        "preview": "vite preview"
     },
-    "eslintConfig": {
-        "extends": [
-            "react-app",
-            "react-app/jest"
-        ]
-    },
-    "browserslist": {
-        "production": [
-            ">0.2%",
-            "not dead",
-            "not op_mini all"
-        ],
-        "development": [
-            "last 1 chrome version",
-            "last 1 firefox version",
-            "last 1 safari version"
-        ]
+    "dependencies": {
+        "react": "^18.3.1",
+        "react-dom": "^18.3.1"
     },
     "devDependencies": {
-        "react-scripts": "^5.0.1",
-        "tailwindcss": "^3.4.3"
+        "@eslint/js": "^9.8.0",
+        "@types/react": "^18.3.3",
+        "@types/react-dom": "^18.3.0",
+        "@vitejs/plugin-react": "^4.3.1",
+        "autoprefixer": "^10.4.20",
+        "eslint": "^9.8.0",
+        "eslint-plugin-react-hooks": "^5.1.0-rc.0",
+        "eslint-plugin-react-refresh": "^0.4.9",
+        "globals": "^15.9.0",
+        "postcss": "^8.4.41",
+        "tailwindcss": "^3.4.9",
+        "typescript": "^5.5.3",
+        "typescript-eslint": "^8.0.0",
+        "vite": "^5.4.0"
     }
 }
