--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -24,9 +24,9 @@ jobs:
       - name: Generate descriptions
         env:
           GEMINI_API_KEY: ${{ secrets.GEMINI_API_KEY }}
-          GITHUB_TOKEN: ${{ secrets.TOKEN_TOKEN }}
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
-          python main.py --api_key $GEMINI_API_KEY --github_owner ${{ github.repository_owner }} --github_token $TOKEN_TOKEN
+          python main.py --api_key $GEMINI_API_KEY --github_owner ${{ github.repository_owner }} --github_token $GITHUB_TOKEN
 
       - name: Commit and push changes
         uses: stefanzweifel/git-auto-commit-action@v4
