--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -3,6 +3,7 @@ name: Generate Repo Descriptions
 on:
   schedule:
     - cron: '0 10 * * 0'  # Every Sunday at 10:00 AM UTC
+  workflow_dispatch:
 
 jobs:
   generate_descriptions:
