--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -2,7 +2,7 @@ name: Generate Repo Descriptions
 
 on:
   schedule:
-    - cron: '0 10 * * 0'  # Every Sunday at 10:00 AM UTC
+    - cron: '0 0 */2 * *'  # Every Two days at 12:00 AM UTC
   workflow_dispatch:
 
 jobs:
